# fixed-income-fund-ranking

./: .gitignore  README.md  config.yaml  pyproject.toml  run.py
.streamlit/: config.toml
airflow/: docker-compose-airflow.yml  requirements.txt
airflow/dags/: ingest_dag.py  marts_dag.py  publish_dag.py  staging_dag.py
dashboard/: app.py  data.py
dashboard/pages/: 1_Rankings.py  2_Fund.py  3_Validation.py
src/: config.py  schemas.py  storage.py
src/compute/: metrics.py  publish.py  ranking.py  report.py  returns.py  risk.py  universe.py
src/ingestion/: _utils.py  anbima_xlsx.py  bcb.py  cvm.py  ingest.py
src/marts/: mart.py  metrics.py  ranking.py  universe.py
src/marts/compute/: metrics.py  ranking.py  returns.py  risk.py  tax.py
src/publish/: _utils.py  publish.py  report.py
src/staging/: _base.py  _utils.py  anbima.py  cdi_rates.py  daily_quotes.py  fees.py  registry.py  stage.py
src/validation/: __init__.py  _base.py  _utils.py  anbima.py  cdi_rates.py  daily_quotes.py  fees.py  registry.py  validate_ingestion.py  validate_marts.py  validate_staging.py
tests/: test_compute.py  test_metrics_golden.py  test_storage.py  test_validation.py
tests/fixtures/: metrics_2025-05-07.parquet
